[package]
name = "rust-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
polars = { version = "0.46.0", features = ["lazy", "csv", "json", "parquet", "strings", "regex", "cov", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'